--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/api.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/api.mustache
@@ -2,6 +2,7 @@
 import 'dart:async';
 import 'package:dio/dio.dart';
 import 'package:{{pubName}}/{{sourceFolder}}/repository_base.dart';
+import 'package:{{pubName}}/{{sourceFolder}}/api_util.dart';
 import 'package:{{pubName}}/models.dart';
 {{#operations}}
 {{#imports}}import '{{.}}';
