remove TODOs from test projects

--- a/modules/openapi-generator/src/main/resources/dart/serialization/json_serializable/repository_impl.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/serialization/json_serializable/repository_impl.mustache
@@ -33,7 +33,7 @@ class JsonSerializableRepository extends SerializationRepositoryBase {
                 return (valueString == 'true' || valueString == '1') as T;
             case double:
                 return (valueParsed is num ? valueParsed.toDouble() : double.parse(valueParsed.toString())) as T;
-            //TODO: add support for DateTime?
+            {{! TODO: add support for DateTime? }}
             {{#models}}
             {{#model}}
             case {{{classname}}}:
