--- a/modules/openapi-generator/src/main/resources/dart/serialization/json_serializable/test_instance.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/serialization/json_serializable/test_instance.mustache
@@ -1,2 +1,2 @@
   final {{{classname}}}? instance = /* {{{classname}}}(...) */ null;
-  // TODO add properties to the entity
+  // add properties to the entity
