--- a/modules/openapi-generator/src/main/resources/dart/serialization/built_value/test_instance.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/serialization/built_value/test_instance.mustache
@@ -1,2 +1,2 @@
   {{#vendorExtensions.x-is-parent}}//{{/vendorExtensions.x-is-parent}}final instance = {{{classname}}}Builder();
-  // TODO add properties to the builder and call build()
+  // add properties to the builder and call build()
