Fix encoding issue for dart-dio

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
@@ -1,6 +1,6 @@
 name: {{pubName}}
 version: {{pubVersion}}
-description: {{pubDescription}}
+description: {{{pubDescription}}}
 homepage: {{pubHomepage}}
 {{#pubRepository}}
 repository: {{.}}
