--- a/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
@@ -4,7 +4,7 @@
 
 name: '{{{pubName}}}'
 version: '{{{pubVersion}}}'
-description: '{{{pubDescription}}}'
+description: {{{pubDescription}}}
 homepage: '{{{pubHomepage}}}'
 {{#pubRepository}}
 repository: {{.}}
