--- a/modules/openapi-generator/src/main/resources/Groovy/ApiUtils.mustache
+++ b/modules/openapi-generator/src/main/resources/Groovy/ApiUtils.mustache
@@ -5,12 +5,30 @@ import static java.net.URI.create
 
 class ApiUtils {
 
+    static def jsonGenerator = new JsonGenerator.Options()
+            .addConverter(Enum) { Enum u, String key ->
+                u.toString()
+            }
+            .build()
+
     void invokeApi(onSuccess, onFailure, basePath, versionPath, resourcePath, queryParams, headerParams, bodyParams, contentType, method, container, type)  {
         def (url, uriPath) = buildUrlAndUriPath(basePath, versionPath, resourcePath)
         println "url=$url uriPath=$uriPath"
         def http = configure {
             request.uri = url
             request.uri.path = uriPath
+            request.encoder(ContentTypes.JSON, { final ChainedHttpConfig config, final ToServer ts ->
+                final ChainedHttpConfig.ChainedRequest request = config.getChainedRequest();
+                if (NativeHandlers.Encoders.handleRawUpload(config, ts)) {
+                    return;
+                }
+
+                final Object body = NativeHandlers.Encoders.checkNull(request.actualBody());
+                final String json = ((body instanceof String || body instanceof GString)
+                        ? body.toString()
+                        : new JsonBuilder(body, jsonGenerator).toString());
+                ts.toServer(NativeHandlers.Encoders.stringToStream(json, request.actualCharset()));
+            })
         }
         .invokeMethod(String.valueOf(method).toLowerCase()) {
             request.uri.query = queryParams
