--- a/modules/openapi-generator/src/main/resources/Groovy/modelEnum.mustache
+++ b/modules/openapi-generator/src/main/resources/Groovy/modelEnum.mustache
@@ -1,4 +1,4 @@
-enum {{classname}} {
+enum {{{datatypeWithEnum}}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} {
 {{#allowableValues}}{{#enumVars}}
     {{#enumDescription}}
         /**
