--- a/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-spring-webclient/api.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-spring-webclient/api.mustache
@@ -7,10 +7,17 @@ import com.fasterxml.jackson.annotation.JsonProperty
 
 import org.springframework.web.reactive.function.client.WebClient
 import org.springframework.web.reactive.function.client.WebClientResponseException
+{{#jackson}}
+import org.springframework.http.codec.json.Jackson2JsonDecoder
+import org.springframework.http.codec.json.Jackson2JsonEncoder
+{{/jackson}}
 import org.springframework.http.ResponseEntity
 import org.springframework.util.MultiValueMap
 import org.springframework.web.util.UriComponentsBuilder
+import org.springframework.web.util.UriUtils
 import reactor.core.publisher.Mono
+import java.nio.charset.Charset
+import java.nio.charset.StandardCharsets.UTF_8
 
 {{#imports}}import {{import}}
 {{/imports}}
@@ -18,6 +25,17 @@ import {{packageName}}.infrastructure.*
 
 {{#operations}}
 {{#nonPublicApi}}internal {{/nonPublicApi}}class {{classname}}(client: WebClient) : ApiClient(client) {
+
+    {{#jackson}}
+    constructor(baseUrl: String) : this(WebClient.builder()
+        .baseUrl(baseUrl)
+        .codecs {
+            it.defaultCodecs().jackson2JsonEncoder(Jackson2JsonEncoder(Serializer.jacksonObjectMapper, MediaType.APPLICATION_JSON))
+            it.defaultCodecs().jackson2JsonDecoder(Jackson2JsonDecoder(Serializer.jacksonObjectMapper, MediaType.APPLICATION_JSON))
+        }
+        .build()
+    )
+    {{/jackson}}
 
     {{#operation}}
     {{#allParams}}
@@ -124,13 +142,6 @@ import {{packageName}}.infrastructure.*
 
     {{/operation}}
     private fun encodeURIComponent(uriComponent: kotlin.String): kotlin.String =
-        UriComponentsBuilder.newInstance()
-            .scheme("http")
-            .host("localhost")
-            .pathSegment(uriComponent)
-            .build()
-            .encode()
-            .pathSegments
-            .first()
+        UriUtils.encodeFragment(uriComponent, Charset.defaultCharset())
 }
 {{/operations}}
