--- a/modules/openapi-generator/src/main/resources/go-gin-server/Dockerfile.mustache
+++ b/modules/openapi-generator/src/main/resources/go-gin-server/Dockerfile.mustache
@@ -6,9 +6,8 @@ COPY go.sum .
 COPY go.mod .
 
 ENV CGO_ENABLED=0
-RUN go install
 
-RUN go build -a -installsuffix cgo -o {{packageName}} .
+RUN go build -o {{packageName}} .
 
 FROM scratch AS runtime
 ENV GIN_MODE=release
