add auto-generated go.sum file

--- a/modules/openapi-generator/src/main/resources/go-server/go.mod.mustache
+++ b/modules/openapi-generator/src/main/resources/go-server/go.mod.mustache
@@ -1,6 +1,6 @@
-module {{gitHost}}/{{gitUserId}}/{{gitRepoId}}
+module {{gitHost}}/{{gitUserId}}/{{gitRepoId}}{{#isGoSubmodule}}/{{packageName}}{{/isGoSubmodule}}
 
-go 1.18
+go 1.19
 
 {{#routers}}
 	{{#mux}}
